# chemcloud-server

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Pipfile  README.md  celeryworker.dockerfile  docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.worker.yaml  docker-compose.yaml  mypy.ini  pyproject.toml  server.dockerfile  setup.cfg
.circleci/: config.yml
.github/workflows/: basic-code-quality.yaml  create-release.yaml
auth0/: default_role_new_signups_rule.js
chemcloud_server/: __init__.py  auth.py  config.py  exceptions.py  main.py  models.py
chemcloud_server/routes/: compute.py  dashboard.py  helpers.py  oauth.py  users.py
docker/: celeryworker.dockerfile  context.dev  context.prod  docker-compose.base.yaml  docker-compose.extnet.yaml  docker-compose.fire.yaml  docker-compose.local.yaml  docker-compose.web.yaml  docker-compose.worker.yaml  docker-compose.xstream.dev.yaml  docker-compose.xstream.prod.yaml  nginx.local.conf  server.dockerfile  terachem.yaml  worker_and_terachem.dockerfile
docs/development/: architecture.md  auth.md  dev-decisions.md
qccloud_server/: auth.py  config.py  main.py  models.py
qccloud_server/routes/: compute.py  helpers.py  oauth.py  users.py
quantum_web_services/: main.py
scripts/: berny_opt.py  compute.py  energy_group.py  example.ipynb  example.py  geom_opt.py  geometric_opt.py  geometric_opt_ff.py  test.sh  tests.sh
scripts/hacking/: __init__.py  energy_group.py  hessian_celery.py
terachem_cloud/: auth.py  config.py  main.py  models.py  task_canvas.py  task_models.py  tasks.py  utils.py
terachem_cloud/routes/: compute.py  helpers.py  oauth.py  users.py
terachem_cloud/workers/: config.py  helpers.py  task_canvas.py  tasks.py
tests/: conftest.py  test_compute.py  test_hello_world.py  test_helpers.py  test_task_canvas_helpers.py  test_task_helpers.py  test_tasks.py  test_users.py  utils.py
tests/test_data/: frequency_analysis_answer.json  hessian_answer.json  hessian_gradients.json
