[tool.poetry]
name = "chemcloud-server"
version = "0.11.3"
description = "An HTTP API for BigChem"
authors = ["Colton Hicks <github@coltonhicks.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "chemcloud_server" }]

[tool.poetry.dependencies]
python = "^3.11"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
python-multipart = "^0.0.5"
httpx = "^0.23.3"
python-dotenv = "^0.21.1"
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"
uvloop = "^0.17.0"
httptools = "^0.5.0"
typing-extensions = "^4.5.0"
aiofiles = "^23.1.0"
cached-property = "^1.5.2"
bigchem = ">=0.6.1"
fastapi = ">=0.103.0"
pydantic = ">=2.0.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
isort = "^5.12.0"
pytest = "^7.2.1"
pre-commit = "^3.0.4"
pytest-cov = "^4.0.0"
pytest-timeout = "^2.1.0"
types-requests = "^2.28.11.13"
colorama = "^0.4.6"
ruff = "^0.0.287"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.black]
line-length = 88

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.ruff.per-file-ignores]
"chemcloud_server/routes/dashboard.py" = ["E501"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/migrations/*", "*site-packages*", "*__init__.py"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
