[tool.poetry]
name = "chemcloud-server"
version = "0.15.2"
description = "An HTTP API for BigChem"
authors = ["Colton Hicks <github@coltonhicks.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "chemcloud_server" }]
repository = "https://github.com/mtzgroup/chemcloud-server"
homepage = "https://chemcloud.mtzlab.com"

[tool.poetry.dependencies]
python = "^3.11"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
httpx = "^0.28.0"
python-dotenv = "^0.21.1"
gunicorn = "^22.0.0"
uvicorn = "^0.34.0"
uvloop = "^0.21.0"
httptools = "^0.6.0"
aiofiles = "^24.1.0"
cached-property = "^2.0.1"
bigchem = ">=0.10.7"
fastapi = ">=0.111.0"
pydantic = ">=2.0.0,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0"
pydantic-settings = "^2.0.3"
qcio = ">=0.11.7"
python-multipart = "^0.0.18"
logfire = {extras = ["fastapi"], version = "^3.7.1"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
pytest = "^7.2.1"
pre-commit = "^3.0.4"
pytest-cov = "^4.0.0"
pytest-timeout = "^2.1.0"
types-requests = "^2.28.11.13"
colorama = "^0.4.6"
ruff = "^0.9.5"
types-toml = "^0.10.8.20240310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
isort = { known-first-party = ["tests"] }
select = ["I", "F401"]

[tool.ruff.lint.per-file-ignores]
"chemcloud_server/routes/dashboard.py" = ["E501"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/migrations/*", "*site-packages*", "*__init__.py"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
